- now REPLACES comments templatetag rather than override it
- updated some comments
- protect from_url from unicode strings
- strip whitespaces off input before cleaning
- added COMMENTS_CHECK_REGISTERED_USER_EMAIL option to disable registered user email protection
- CommentForm.__unicode__() no longer catches exception
- Comment.__unicode__() now returns user or user_name
- updated documentation
- fixed preview on post
- templatetags/model_comment_tags.py now imports all of the contrib comment tags
- render_comment_form() now also passes the request context
- added get_comment_list() template tag
- extracted functionality get_subsubclasses_for()
- get_form_class_for_object() tweaked to also support subclasses of class
- added missing import from django.utils.html.escape
- prevent None type exception when "from_url" is not passed

--- a/templates/comments/app/model/form.html
+++ b/templates/comments/app/model/form.html
@@ -4,13 +4,15 @@
 
 {% block content %}
 
+<a name="preview"></a>
+
 {% if form.is_valid and form.preview %}
 	{{ form|preview_comment }}
 {% endif %}
 
 <b>Post your comment</b>
 
-<form action="{% comment_form_target %}" method="post" class="model-comment-form model-comment-form-{{ form.get_model_name }}">
+<form action="{% comment_form_target %}#preview" method="post" class="model-comment-form model-comment-form-{{ form.get_model_name }}">
 	{{ form }}
 
     <p class="submit">
