--- a/templates/comments/form.html
+++ b/templates/comments/form.html
@@ -14,6 +14,7 @@
 	{{ form }}
 
     <p class="submit">
+    {% csrf_token %}
     <input type="submit" name="submit" class="submit-post" value="Post" />
     <input type="submit" name="preview" class="submit-preview" value="Preview" />
     </p>
